jlamontSC-test/src/objects/Strategic_Partnership_Role__c.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Partnership_Project__c</fullName>
        <label>Strategic Partnership Project</label>
        <referenceTo>Strategic_Partnership_Project__c</referenceTo>
        <relationshipLabel>Strategic Partnership Roles</relationshipLabel>
        <relationshipName>Strategic_Partnership_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategic Partnership Roles</relationshipLabel>
        <relationshipName>Strategic_Partnership_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Partnership Liaison</fullName>
                </value>
                <value>
                    <fullName>Chapter Staff</fullName>
                </value>
                <value>
                    <fullName>Conservation Solicitor</fullName>
                </value>
                <value>
                    <fullName>Entertainment Relations Liaison</fullName>
                </value>
                <value>
                    <fullName>Indistrict Lobbyist</fullName>
                </value>
                <value>
                    <fullName>Lead Indistrict Lobbyist</fullName>
                </value>
                <value>
                    <fullName>Lead Lobbyist</fullName>
                </value>
                <value>
                    <fullName>Local Campaign Contact</fullName>
                </value>
                <value>
                    <fullName>Local Fundraising</fullName>
                </value>
                <value>
                    <fullName>Local National Staff</fullName>
                </value>
                <value>
                    <fullName>National Fundraising</fullName>
                </value>
                <value>
                    <fullName>National Staff</fullName>
                </value>
                <value>
                    <fullName>Staff Solicitor</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnership Liaison</fullName>
                </value>
                <value>
                    <fullName>Volunteer Leader</fullName>
                </value>
                <value>
                    <fullName>Volunteer Solicitor</fullName>
                </value>
                <value>
                    <fullName>Point Person</fullName>
                    <isActive>false</isActive>
                    <label>Point Person</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Strategic Partnership Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Strategic_Partnership_Project__c</columns>
        <columns>Team_Member__c</columns>
        <columns>Team_Role__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPOT-{00000000}</displayFormat>
        <label>Strategic Partnership Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Partnership Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>